Fix menu-children behaviour in main menu - fix visible / not visible behaviour - reduce size of the + button (position: absolute on menu-children) - add darker background + box-shadow
-> issue specific to redmine 3.x ?

--- a/sass/application.sass
+++ b/sass/application.sass
@@ -416,6 +416,17 @@ select
 	margin: 0 -1.5em
 	padding: 0 1.5em
 
+	ul.menu-children
+		background: $medium-grey
+		display: none
+		position: absolute
+		z-index: 99
+		right: 0
+		left: 0
+		box-shadow: inset 0 -1px 0 $grey
+		&.visible
+			display: block
+
 	li
 		display: table-cell
 		width: 1%
